--- a/src/app/pages/unit/unit.page.html
+++ b/src/app/pages/unit/unit.page.html
@@ -160,7 +160,7 @@
                     type="submit" 
                     color="secondary" 
                     expand="block"
-                    translate="group.buttonsubmit"
+                    translate="uom.button_submit"
                     class="submit-button">
              @if(isLoading) {<ion-spinner class="spinner-button"></ion-spinner>}
         </ion-button>
