--- a/src/app/pages/product/product.page.scss
+++ b/src/app/pages/product/product.page.scss
@@ -33,3 +33,51 @@
     width: 100%;
     object-fit: fill;
 }
+
+.header-container {
+    display: flex;
+ }
+ 
+ .first-item {
+     flex: 1;
+  }
+ 
+ .first-item:first-child {
+     margin-left: 5px;
+     margin-right: 5px;
+  }
+
+  .product-child-data{
+    width:100%;
+  //  border: 1px solid #420640;
+    padding: 5px;
+  }
+
+.product-tabs {
+    width:100%;
+    height: 300px;
+    border: 1px solid blue;
+    padding: 5px;
+}
+  
+.product-tabs-header {
+    width:100%;
+    height: 100px;
+    border: 1px solid blue;
+    margin-bottom: 5px;
+}
+
+.product-tabs-content {
+    width: 100%;
+    height: 185px;
+    border: 1px solid blue;
+    margin-top: 5px;
+}
+
+.select-whole-width { 
+    width:100%;
+}
+
+  .auto-check{
+    margin-top: 19px;
+  }
